# tilepad-plugin-system-indicators

./: Cargo.toml  Makefile.toml  README.md  cspell.json
.github/workflows/: build-and-bundle.yml
.tilepadPlugin/: manifest.json
.tilepadPlugin/displays/: cpu_temp.display.html  gpu_temp.display.html
src/: main.rs  plugin.rs
