[package]
name = "tilepad-plugin-obs-studio"
version = "0.0.1"
edition = "2024"

[dependencies]
# Lock library
parking_lot = "0.12.3"

# Plugin SDK 
tilepad-plugin-sdk = { version = "0.3.0", path = "../tilepad-sdk-rs" }

# Async runtime
tokio = { version = "1.44.1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lhm-client = "0.0.0"
base64 = "0.22.1"
