[package]
name = "tilepad-plugin-system-indicators"
version = "0.0.1"
edition = "2024"

[dependencies]
# Plugin SDK 
tilepad-plugin-sdk = { version = "0.3.0", path = "../tilepad-sdk-rs" }

# Async runtime
tokio = { version = "1", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LibreHardwareMonitor Service client
lhm-client = "0.2.0"

# Error handling
anyhow = "1"
